--- a/app/components/notes/notes.component.css
+++ b/app/components/notes/notes.component.css
@@ -1,3 +1,7 @@
 tbody tr {
   cursor: pointer;
 }
+
+tbody tr td:nth-child(6){
+  display: none;  
+}
